--- a/src/app/views/components/dashboard/dashboard.component.scss
+++ b/src/app/views/components/dashboard/dashboard.component.scss
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+.custom-margin {
+  margin-right: -10px;
+  margin-left: -10px;
+}
+
 .tiles {
   display: grid;
   grid-template-columns: repeat(2, 2fr);
@@ -21,11 +26,10 @@
   background-color: #f4f5f7;
   color: #003C54;
   box-shadow: 3px 3px 3px #CFCFCF;
-  //border: 1px solid #41829B;
-  //min-height: 200px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  //justify-content: center;
+  align-items: center;
   position: relative;
   transition: 0.25s ease;
 
@@ -35,18 +39,11 @@
     background-color: #EBEFF7;
   }
 
-  //
-  //&:nth-child(2) {
-  //  background-color: #a3acaa;
-  //
-  //}
-  //&:nth-child(3) {
-  //  background-color: #bdbbb7;
-  //}
-  //
-  //&:nth-child(4) {
-  //  background-color: #6d5d3d;
-  //}
+  &.tile-header{
+    justify-content: space-between;
+    align-items: center;
+  }
+
 
   a {
     text-decoration: none;
@@ -98,6 +95,9 @@
     flex-direction: column;
     line-height: 1.375;
     margin-left: 0.5rem;
+    font-family: "Arial";
+    justify-content: space-between;
+    align-items: center;
 
     span:first-child {
       font-weight: 600;
@@ -152,7 +152,47 @@ a {
   color: inherit;
 }
 
-// 待辦事項
+/******************************************************* chart 1 ****************************************************/
+.chart1-container {
+  position: relative;
+  display: inline-flex;
+  justify-content: center;
+}
+
+.chart1-center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -70%);
+
+  h2{
+    color: #212121;
+  }
+
+  .total {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 40%);
+    font-size: 40px;
+    font-family: "Verdana", sans-serif;
+    font-weight: bold;
+  }
+}
+
+/******************************************************* chart 2 ****************************************************/
+.chart2-container {
+  position: relative;
+  display: inline-flex;
+  justify-content: center;
+}
+:host ::ng-deep {
+  .chart2{
+    width: 600px;
+  }
+}
+/******************************************************* 待辦事項 ****************************************************/
+
 body {
   background: #1f253d;
 }
@@ -184,10 +224,6 @@ h1, h2, p {
   color: #fff;
 }
 
-a, span {
-  //color: #fff;
-}
-
 .scnd-font-color {
   color: #9099b7;
 }
@@ -205,7 +241,6 @@ a, span {
   border-top-right-radius: 5px;
 }
 
-/** CONTAINERS **/
 .container {
   float: left;
   width: 300px;
@@ -218,7 +253,6 @@ a, span {
   box-shadow: 3px 3px 3px #CFCFCF;
 }
 
-/******************************************** LEFT CONTAINER *****************************************/
 .menu-box {
   height: 360px;
 }
@@ -261,20 +295,24 @@ a, span {
   transition: background .2s;
 }
 
+.menu-box-tab-last {
+  line-height: 60px;
+  display: block;
+  -webkit-transition: background .2s;
+  transition: background .2s;
+}
+
 .menu-box-tab:hover {
   background: #EBEFF7;
   border-top: 1px solid #1f253d;
   text-decoration: none;
 }
 
-//.menu-box-tab:hover .icon {
-//  color: #fff;
-//}
-
 .menu-box-tab:hover .menu-box-number {
-  background: #e64c65;
+  background: #FF0020;
+  color: #FFFFFB;
 }
-
+/******************************************************* 待辦事項 ****************************************************/
 
 
 
