--- a/src/app/views/components/footer/footer.component.html
+++ b/src/app/views/components/footer/footer.component.html
@@ -1,13 +1,3 @@
-<footer class="footer">
-  <div class="col-4">
-    <h3>
-      <span class="foot">報告</span>
-    </h3>
-  </div>
-<!--  <div class="col-4">-->
-<!--    123-->
-<!--  </div>-->
-<!--  <div class="col-4">-->
-<!--    123-->
-<!--  </div>-->
+<footer class="footer"  style="border-collapse:collapse;">
+  123123
 </footer>
