feat: container css

--- a/src/app/views/container/container.component.html
+++ b/src/app/views/container/container.component.html
@@ -1,8 +1,10 @@
+
 <app-toolbar></app-toolbar>
-
+<div class="container">
 <router-outlet></router-outlet>
-
+</div>
 <app-footer></app-footer>
+
 
 <!--<footer class="p-footer">-->
 <!--  <div class="col-4">-->
