--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,4 +6,9 @@ body {
   margin: 0;
   background: #FFFFFB;
   overflow-y: scroll;
+  padding: 0;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  position: relative;
 }
