--- a/src/app/views/features/event/event.component.scss
+++ b/src/app/views/features/event/event.component.scss
@@ -2,7 +2,6 @@
 
 :host ::ng-deep {
 
-
   .fc-toolbar-title {
     font-family: "Verdana", sans-serif;
     font-size: 24px;
@@ -11,69 +10,61 @@
     display: inline-flex;
   }
 
-
   .fc .fc-toolbar.fc-header-toolbar {
     margin-bottom: 3.5rem;
-      align-items: center;
-      display: flex;
-      justify-content: space-between;
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
   }
 
-  .fc.fc-theme-standard .fc-toolbar .fc-button {
-    font-family: "Verdana", sans-serif;
-    background: #104673;
-    border: 0;
-    color: #FFFFFB;
-    cursor: pointer;
-    outline: 0;
+  .fc.fc-theme-standard .fc-toolbar {
+    .fc-button {
+      font-family: "Verdana", sans-serif;
+      background: #104673;
+      border: 0;
+      color: #FFFFFB;
+      cursor: pointer;
+      outline: 0;
+
+      &.fc-dayGridMonth-button.fc-button-active,
+      &.fc-timeGridWeek-button.fc-button-active,
+      &.fc-timeGridDay-button.fc-button-active {
+        background: #104673;
+        opacity: 0.6;
+        border: none;
+        box-shadow: 0 0 0 0;
+      }
+
+      &:hover {
+        border: 0;
+        background: #104673;
+        color: #FFFFFB;
+      }
+    }
+
+    .fc-next-button,
+    .fc-prev-button {
+      background: 0;
+      color: #104673;
+      border: none;
+      position: relative;
+      display: inline-flex;
+
+      &:hover {
+        background-color: #ddd;
+        color: #333;
+        border: none;
+        box-shadow: none;
+      }
+    }
   }
 
-  .fc.fc-theme-standard .fc-toolbar .fc-button.fc-dayGridMonth-button.fc-button-active,
-  .fc.fc-theme-standard .fc-toolbar .fc-button.fc-timeGridWeek-button.fc-button-active,
-  .fc.fc-theme-standard .fc-toolbar .fc-button.fc-timeGridDay-button.fc-button-active {
-    background: #104673;
-    opacity: 0.6;
-    border: none;
-    box-shadow: 0 0 0 0;
-  }
-
-  .fc.fc-theme-standard .fc-toolbar .fc-button:hover {
-    border: 0;
-    background: #104673;
-    color: #FFFFFB;
-  }
-
-
-  .fc-toolbar-chunk{
-    div{
+  .fc-toolbar-chunk {
+    div {
       display: inline-flex;
       align-items: center;
       text-align: center;
     }
-  }
-
-  .fc.fc-theme-standard .fc-toolbar .fc-next-button {
-    background: 0;
-    color: #104673;
-    border: none;
-    position: relative;
-    display: inline-flex;
-  }
-
-  .fc.fc-theme-standard .fc-toolbar .fc-prev-button {
-    background: 0;
-    color: #104673;
-    border: none;
-    position: relative;
-    display: inline-flex;
-  }
-
-  .fc.fc-theme-standard .fc-toolbar .fc-next-button:hover,
-  .fc.fc-theme-standard .fc-toolbar .fc-prev-button:hover {
-    background-color: #ddd;
-    color: #333;
-    border: none;
-    box-shadow: none;
   }
 }
 
