--- a/src/app/views/features/product/product.component.html
+++ b/src/app/views/features/product/product.component.html
@@ -9,7 +9,7 @@
       </div>
       <p-table [rowsPerPageOptions]="[5, 10, 15]" [value]="GetAllProduct" [paginator]="true" #dt1
                sortField="updated_at" [sortOrder]="-1" [globalFilterFields]="['name','code','price','description']"
-               [rows]="5" [totalRecords]="totalRecords" [lazy]="true" (onLazyLoad)="loadPostsLazy($event)"
+               [rows]="5" [totalRecords]="totalRecords" [lazy]="true" (onLazyLoad)="loadTable($event)"
                [showCurrentPageReport]="true" [(first)]="first"
                currentPageReportTemplate="從 {first} 到 {last} 筆，共 {totalRecords} 筆">
         <ng-template pTemplate="caption">
