--- a/src/app/views/features/lead/lead.component.html
+++ b/src/app/views/features/lead/lead.component.html
@@ -40,11 +40,11 @@
             <!--            <th pSortableColumn="name">姓名-->
             <!--              <p-sortIcon field="name"></p-sortIcon>-->
             <!--            </th>-->
-            <th pSortableColumn="name">描述
-              <p-sortIcon field="name"></p-sortIcon>
+            <th pSortableColumn="description">描述
+              <p-sortIcon field="description"></p-sortIcon>
             </th>
-            <th pSortableColumn="account_name">帳戶
-              <p-sortIcon field="account_name"></p-sortIcon>
+            <th>帳戶
+<!--              <p-sortIcon field="account_name"></p-sortIcon>-->
             </th>
             <th pSortableColumn="rating">分級
               <p-sortIcon field="rating"></p-sortIcon>
