--- a/src/app/views/components/footer/footer.component.scss
+++ b/src/app/views/components/footer/footer.component.scss
@@ -1,11 +1,36 @@
 //@import 'src/app/app.component.scss';
-@import "primeicons/primeicons.css";
+//@import "primeicons/primeicons.css";
 
-.footer{
+.footer {
   width: 100%;
-  height: 50px; /*設定footer本身高度*/
-  background-color: #2E5C6E;
+  height: 70px; /*設定footer本身高度*/
+  background-color: #FAFAF5;
   bottom: 0;
   left: 0;
   position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Poppins', sans-serif;
+  font-size: 14px;
+  color: #80807D;
+}
+
+.social-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+  a {
+    color: #3f4750;
+    margin-right: 20px;
+    margin-left: 20px;
+  }
 }
