feat: 聯絡人表格排序 & 搜尋

--- a/src/app/views/features/opportunity/opportunity.component.html
+++ b/src/app/views/features/opportunity/opportunity.component.html
@@ -45,9 +45,7 @@
             <th pSortableColumn="close_date">結束日期
               <p-sortIcon field="close_date"></p-sortIcon>
             </th>
-            <th pSortableColumn="created_by">業務員
-              <p-sortIcon field="created_by"></p-sortIcon>
-            </th>
+            <th>業務員</th>
             <th></th>
           </tr>
         </ng-template>
