--- a/src/app/views/features/account/account.component.html
+++ b/src/app/views/features/account/account.component.html
@@ -30,9 +30,7 @@
             <th pSortableColumn="type">類型
               <p-sortIcon field="type"></p-sortIcon>
             </th>
-            <th pSortableColumn="created_by">業務員
-              <p-sortIcon field="created_by"></p-sortIcon>
-            </th>
+            <th>業務員</th>
             <th></th>
           </tr>
         </ng-template>
