--- a/src/app/views/features/contact/contact.component.html
+++ b/src/app/views/features/contact/contact.component.html
@@ -8,12 +8,12 @@
                     styleClass="p-button-text"></p-button>
         </span>
       </div>
-      <p-table [value]="getData" [lazy]="true" [totalRecords]="total" [rows]="10" [paginator]="true"
-               (onLazyLoad)="loadPostsLazy($event)">
+      <p-table #dt [value]="getData" [lazy]="true" [totalRecords]="total" [rows]="10" [paginator]="true"
+               (onLazyLoad)="loadTable($event)">
         <ng-template pTemplate="caption">
           <div class="flex">
             <span class="p-input-icon-left ml-auto">
-              <td><input type="text" [(ngModel)]="filterText" (input)="filtercontacts()" pInputText
+              <td><input type="text" [(ngModel)]="search" (input)="applyFilterGlobal($event, 'contains')" pInputText
                          placeholder="關鍵字搜索"></td>
             </span>
           </div>
@@ -23,18 +23,14 @@
             <th pSortableColumn="name">姓名
               <p-sortIcon field="name"></p-sortIcon>
             </th>
-            <th pSortableColumn="account_name">帳戶
-              <p-sortIcon field="account_name"></p-sortIcon>
-            </th>
+            <th>帳戶</th>
             <th pSortableColumn="cell_phone">行動電話
               <p-sortIcon field="cell_phone"></p-sortIcon>
             </th>
             <th pSortableColumn="email">電子郵件
               <p-sortIcon field="email"></p-sortIcon>
             </th>
-            <th pSortableColumn="created_by">業務員
-              <p-sortIcon field="created_by"></p-sortIcon>
-            </th>
+            <th>業務員</th>
             <th></th>
           </tr>
         </ng-template>
