--- a/src/app/views/features/lead/lead.component.html
+++ b/src/app/views/features/lead/lead.component.html
@@ -44,7 +44,7 @@
               <p-sortIcon field="description"></p-sortIcon>
             </th>
             <th>帳戶
-<!--              <p-sortIcon field="account_name"></p-sortIcon>-->
+              <!--              <p-sortIcon field="account_name"></p-sortIcon>-->
             </th>
             <th pSortableColumn="rating">分級
               <p-sortIcon field="rating"></p-sortIcon>
@@ -64,9 +64,7 @@
             <!--            <th pSortableColumn="line">LINE-->
             <!--              <p-sortIcon field="line"></p-sortIcon>-->
             <!--            </th>-->
-            <th pSortableColumn="created_by">業務員
-              <p-sortIcon field="created_by"></p-sortIcon>
-            </th>
+            <th>業務員</th>
             <th></th>
           </tr>
         </ng-template>
