fix: 訂單 getall api

--- a/src/app/views/features/order/order.component.html
+++ b/src/app/views/features/order/order.component.html
@@ -8,7 +8,7 @@
         </span>
       </div>
       <p-table [rowsPerPageOptions]="[5, 10, 15]" [(first)]="first" [showCurrentPageReport]="true"
-               (onLazyLoad)="loadTable($event)"
+               (onLazyLoad)="loadPostsLazy($event)" #dt1
                [value]="GetAllOrder" [paginator]="true" [rows]="5" [lazy]="true" [totalRecords]="totalRecords"
                currentPageReportTemplate="從 {first} 到 {last} 筆，共 {totalRecords} 筆">
         <ng-template pTemplate="caption">
@@ -20,8 +20,8 @@
               <span>{{status[1].name}}</span>
             </div>
             <span class="p-input-icon-left ml-auto">
-              <td><input type="text" [(ngModel)]="filterText" (input)="filterorders()" pInputText
-                         placeholder="關鍵字搜索"></td>
+               <td><input [(ngModel)]="search" pInputText type="text" (input)="applyFilterGlobal($event, 'contains')"
+                          placeholder="關鍵字搜索"></td>
             </span>
           </div>
         </ng-template>
@@ -30,9 +30,10 @@
             <th pSortableColumn="status">狀態
               <p-sortIcon field="status"></p-sortIcon>
             </th>
-            <th pSortableColumn="number">號碼
-              <p-sortIcon field="number"></p-sortIcon>
-            </th>
+            <th>號碼</th>
+<!--            <th pSortableColumn="number">號碼-->
+<!--              <p-sortIcon field="number"></p-sortIcon>-->
+<!--            </th>-->
             <th pSortableColumn="account_id">帳戶
               <p-sortIcon field="account_id"></p-sortIcon>
             </th>
@@ -40,9 +41,10 @@
             <th pSortableColumn="start_date">訂單開始日期
               <p-sortIcon field="start_date"></p-sortIcon>
             </th>
-            <th pSortableColumn="contract_number">契約號碼
-              <p-sortIcon field="contract_number"></p-sortIcon>
-            </th>
+            <th>契約號碼</th>
+<!--            <th pSortableColumn="contract_number">契約號碼-->
+<!--              <p-sortIcon field="contract_number"></p-sortIcon>-->
+<!--            </th>-->
             <th></th>
           </tr>
         </ng-template>
