--- a/src/app/views/components/dashboard/dashboard.component.html
+++ b/src/app/views/components/dashboard/dashboard.component.html
@@ -1,20 +1,22 @@
-<div class="flex justify-content-center pt-3">
-  <div class="col-11">
+<div class="flex justify-content-center p-3 overflow-hidden">
+  <div class="col-12">
     <div class="grid justify-content-center">
       <!--左-->
-      <div class="col-3 flex justify-content-center inline-flex custom-margin">
-        <div class="grid inline-block">
+      <div class="col-3 justify-content-center inline-flex">
+        <div class="grid">
           <div class="col-12">
             <!--帳戶-->
             <article class="tile" routerLink="/main/account">
               <!--          <img class="h-12rem" alt="meow" src="https://i0.wp.com/www.printmag.com/wp-content/uploads/2021/02/4cbe8d_f1ed2800a49649848102c68fc5a66e53mv2.gif?fit=476%2C280&ssl=1"/>-->
-              <img class="h-12rem" src="./assets/img/logo/user.png"/>
+              <img class="h-13rem" src="./assets/img/logo/user.png"/>
               <div class="tile-header h-4rem">
                 <h3>
-                  <div><span class="pi pi-users" style="font-size: 1.3rem"></span>
-                    Sam
+                  <div><span class="pi pi-users" style="font-size: 1.3rem">
+                  </span>
+                    帳戶/聯絡人
+                    <span class="count">5</span>
                   </div>
-                  <span>0900-000-000</span>
+                  <span>管理您的帳戶及聯絡人</span>
                 </h3>
               </div>
             </article>
@@ -31,8 +33,11 @@
               </div>
               <div class="tile-header h-4rem">
                 <h3>
-                  <span>chart1</span>
-                  <span>Kharkov 62 str.</span>
+                  <div><span class="pi pi-chart-pie" style="font-size: 1.3rem"></span>
+                    報告
+                    <span class="count">3</span>
+                  </div>
+                  <span>使用圖表呈現業務及銷售數據</span>
                 </h3>
               </div>
             </article>
@@ -40,212 +45,182 @@
         </div>
       </div>
       <!--中-->
-      <div class="col-6 flex justify-content-center inline-flex custom-margin">
-        <div class="grid inline-block">
+      <div class="col-6 justify-content-center inline-flex">
+        <div class="grid inline-flex">
           <div class="col-12">
             <!--chart2-->
-            <article class="tile" routerLink="">
+            <article class="tile" routerLink="/main/forecasting">
               <div class="chart2-container">
                 <p-chart type="line" [data]="data2" [options]="options2" class="chart2"></p-chart>
               </div>
               <div class="tile-header h-4rem">
                 <h3>
-                  <span>chart2</span>
-                  <span>Kharkov 62 str.</span>
+                  <div><span class="pi pi-chart-line" style="font-size: 1.3rem"></span>
+                    預測
+                    <span class="count">2</span>
+                  </div>
+                  <span>使用數據預測銷售表現</span>
                 </h3>
               </div>
             </article>
           </div>
-          <div class="col-12">
+          <div class="col-6">
             <!--線索-->
             <article class="tile" routerLink="/main/lead">
-              <div class="tile-header h-4rem">
+              <div class="tile-header h-6rem">
                 <h3>
-                  <span>線索</span>
-                  <span>Kharkov 62 str.</span>
+                  <div><span class="pi pi-briefcase" style="font-size: 1.3rem"></span>
+                    線索
+                    <span class="count">16</span>
+                  </div>
+                  <span>可能成為潛在客戶的人或公司資訊</span>
                 </h3>
               </div>
-              <a>
-                <span>Go to service</span>
-                <span class="pi pi-briefcase"></span>
-              </a>
             </article>
           </div>
-          <div class="col-12">
+          <div class="col-6">
             <!--商機-->
             <article class="tile" routerLink="/main/opportunity">
-              <div class="tile-header h-4rem">
+              <div class="tile-header h-6rem">
                 <h3>
-                  <span>商機</span>
-                  <span>Kharkov 62 str.</span>
+                  <div><span class="pi pi-dollar" style="font-size: 1.3rem"></span>
+                    商機
+                    <span class="count">10</span>
+                  </div>
+                  <span>已經成為銷售機會的線索</span>
                 </h3>
               </div>
-              <a>
-                <span>Go to service</span>
-                <span class="pi pi-dollar"></span>
-              </a>
             </article>
           </div>
-          <div class="col-12">
+          <div class="col-3">
             <!--商品/服務-->
             <article class="tile" routerLink="/main/product">
-              <div class="tile-header h-8rem">
+              <div class="tile-header h-6rem">
                 <h3>
-                  <span>商品/服務</span>
-                  <span>Kharkov 62 str.</span>
+                  <div><span class="pi pi-box" style="font-size: 1.3rem"></span>
+                    商品/服務
+                  </div>
+                  <span>管理您的商品或服務</span>
                 </h3>
               </div>
-              <a>
-                <span>Go to service</span>
-                <span class="pi pi-box"></span>
-              </a>
             </article>
           </div>
-          <div class="col-12">
-            <!--行事曆-->
-            <article class="tile" routerLink="/main/event">
-              <div class="tile-header h-11rem">
-                <h3>
-                  <span>行事曆</span>
-                  <span>Kharkov 62 str.</span>
-                </h3>
-              </div>
-              <a>
-                <span>Go to service</span>
-                <span class="pi pi-calendar"></span>
-              </a>
-            </article>
-          </div>
-          <div class="col-12">
-            <!--行銷活動-->
-            <article class="tile" routerLink="/main/campaign">
-              <div class="tile-header h-11rem">
-                <h3>
-                  <span>行銷活動</span>
-                  <span>Kharkov 62 str.</span>
-                </h3>
-              </div>
-              <a>
-                <span>Go to service</span>
-                <span class="pi pi-flag"></span>
-              </a>
-            </article>
-          </div>
-          <div class="col-12">
+          <div class="col-3">
             <!--報價-->
             <article class="tile" routerLink="/main/quote">
-              <div class="tile-header h-3rem">
+              <div class="tile-header h-6rem">
                 <h3>
-                  <span>報價</span>
-                  <span>Kharkov 62 str.</span>
+                  <div><span class="pi pi-flag" style="font-size: 1.3rem"></span>
+                    報價
+                    <span class="count">13</span>
+                  </div>
+                  <span>發送給商機的報價</span>
                 </h3>
               </div>
             </article>
           </div>
-          <div class="col-12">
+          <div class="col-3">
             <!--契約-->
             <article class="tile" routerLink="/main/contract">
-              <div class="tile-header h-3rem">
+              <div class="tile-header h-6rem">
                 <h3>
-                  <span>契約</span>
-                  <span>Kharkov 62 str.</span>
+                  <div><span class="pi pi-file-edit" style="font-size: 1.3rem"></span>
+                    契約
+                    <span class="count">8</span>
+                  </div>
+                  <span>管理您的商業契約</span>
                 </h3>
               </div>
-              <a>
-                <span>Go to service</span>
-                <span class="pi pi-file-edit"></span>
-              </a>
             </article>
           </div>
-          <div class="col-12">
+          <div class="col-3">
             <!--訂單-->
             <article class="tile" routerLink="/main/order">
-              <div class="tile-header h-3rem">
+              <div class="tile-header h-6rem">
                 <h3>
-                  <span>訂單</span>
-                  <span>Kharkov 62 str.</span>
+                  <div><span class="pi pi-shopping-cart" style="font-size: 1.3rem"></span>
+                    訂單
+                    <span class="count">7</span>
+                  </div>
+                  <span>管理您已成立的訂單</span>
                 </h3>
               </div>
-              <a>
-                <span>Go to service</span>
-                <span class="pi pi-shopping-cart"></span>
-              </a>
-            </article>
-          </div>
-          <div class="col-12">
-            <!--預測-->
-            <article class="tile" routerLink="/main/forecasting">
-              <div class="tile-header h-3rem">
-                <h3>
-                  <span>預測</span>
-                  <span>Kharkov 62 str.</span>
-                </h3>
-              </div>
-              <a>
-                <span>Go to service</span>
-                <span class="pi pi-chart-line"></span>
-              </a>
-            </article>
-          </div>
-          <div class="col-12">
-            <!--報告-->
-            <article class="tile" routerLink="/main/report">
-              <div class="tile-header h-3rem">
-                <h3>
-                  <span>報告</span>
-                  <span>Kharkov 62 str.</span>
-                </h3>
-              </div>
-              <a>
-                <span>Go to service</span>
-                <span class="pi pi-chart-bar"></span>
-              </a>
             </article>
           </div>
         </div>
       </div>
       <!--右-->
-      <div class="col-3 flex justify-content-center inline-flex custom-margin">
-        <div class="grid inline-block">
+      <div class="col-3 flex justify-content-center inline-flex">
+        <div class="grid inline-flex">
           <div class="col-12">
-            <!--待辦事項-->
-            <div class="container">
-              <div class="menu-box block">
-                <h2 class="titular">待辦事項</h2>
-                <ul class="menu-box-menu">
-                  <li>
-                    <a class="menu-box-tab">
-                      <i class="icon mt-3 fas fa-handshake scnd-font-color"></i>
-                      早上9:00拜訪xx公司</a>
-                  </li>
-                  <li>
-                    <a class="menu-box-tab">
-                      <i class="icon mt-3 fas fa-comments scnd-font-color"></i>
-                      下午3:00A001會議室</a>
-                  </li>
-                  <li>
-                    <a class="menu-box-tab">
-                      <i class="icon mt-3 fas fa-tasks scnd-font-color"></i>
-                      主管交辦事項
-                      <div class="menu-box-number">5</div>
-                    </a>
-                  </li>
-                  <li>
-                    <a class="menu-box-tab">
-                      <i class="icon mt-3 fas fa-calendar scnd-font-color"></i>
-                      即將到來
-                      <div class="menu-box-number">3</div>
-                    </a>
-                  </li>
-                  <li>
-                    <a class="menu-box-tab-last">
-                      <i class="icon mt-3 fas fa-chart-line scnd-font-color"></i>
-                      上週分析報告</a>
-                  </li>
-                </ul>
+            <!--行事曆  routerLink="/main/event"-->
+            <article class="calendar-tile">
+              <div class="calendar-container">
+                <p-calendar [(ngModel)]="date" [inline]="true" [showWeek]="true"></p-calendar>
               </div>
-            </div>
+              <div class="tile-header h-7rem">
+                <h3>
+                  <div><span class="pi pi-calendar" style="font-size: 1.3rem"></span>
+                    行事曆
+                  </div>
+                  <span>檢視、管理您的日程</span>
+                </h3>
+              </div>
+            </article>
           </div>
+          <div class="col-12">
+            <!--行銷活動-->
+            <article class="tile" routerLink="/main/campaign">
+              <div class="tile-header h-9rem">
+                <h3>
+                  <div><span class="pi pi-flag" style="font-size: 1.3rem"></span>
+                    行銷活動
+                  </div>
+                  <span>管理您的行銷活動</span>
+                </h3>
+              </div>
+            </article>
+          </div>
+
+          <!--          <div class="col-12">-->
+          <!--            &lt;!&ndash;待辦事項&ndash;&gt;-->
+          <!--            <div class="container">-->
+          <!--              <div class="menu-box block">-->
+          <!--                <h2 class="titular">待辦事項</h2>-->
+          <!--                <ul class="menu-box-menu">-->
+          <!--                  <li>-->
+          <!--                    <a class="menu-box-tab">-->
+          <!--                      <i class="icon mt-3 fas fa-handshake scnd-font-color"></i>-->
+          <!--                      早上9:00拜訪xx公司</a>-->
+          <!--                  </li>-->
+          <!--                  <li>-->
+          <!--                    <a class="menu-box-tab">-->
+          <!--                      <i class="icon mt-3 fas fa-comments scnd-font-color"></i>-->
+          <!--                      下午3:00A001會議室</a>-->
+          <!--                  </li>-->
+          <!--                  <li>-->
+          <!--                    <a class="menu-box-tab">-->
+          <!--                      <i class="icon mt-3 fas fa-tasks scnd-font-color"></i>-->
+          <!--                      主管交辦事項-->
+          <!--                      <div class="menu-box-number">5</div>-->
+          <!--                    </a>-->
+          <!--                  </li>-->
+          <!--                  <li>-->
+          <!--                    <a class="menu-box-tab">-->
+          <!--                      <i class="icon mt-3 fas fa-calendar scnd-font-color"></i>-->
+          <!--                      即將到來-->
+          <!--                      <div class="menu-box-number">3</div>-->
+          <!--                    </a>-->
+          <!--                  </li>-->
+          <!--                  <li>-->
+          <!--                    <a class="menu-box-tab-last">-->
+          <!--                      <i class="icon mt-3 fas fa-chart-line scnd-font-color"></i>-->
+          <!--                      上週分析報告</a>-->
+          <!--                  </li>-->
+          <!--                </ul>-->
+          <!--              </div>-->
+          <!--            </div>-->
+          <!--          </div>-->
         </div>
       </div>
     </div>
