--- a/src/app/views/features/contract/contract.component.html
+++ b/src/app/views/features/contract/contract.component.html
@@ -53,7 +53,7 @@
 <!--              <p-sortIcon field="end_date"></p-sortIcon>-->
 <!--            </th>-->
             <th>到期日期</th>
-            <th pSortableColumn="term">有效期間(月)
+            <th pSortableColumn="term">有效期限(月)
               <p-sortIcon field="term"></p-sortIcon>
             </th>
             <th></th>
